--- a/index (1).html
+++ b/index (1).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmployWell Benefits</title>
+   <title>Smile Bone Benefits</title>
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -208,3 +208,4 @@
 
 </body>
 </html>
+
