--- a/index (1).html
+++ b/index (1).html
@@ -45,22 +45,16 @@
 
     <!-- Header Section -->
     <header class="bg-custom-blue text-white py-4 px-6 md:px-12 flex justify-between items-center rounded-b-xl shadow-lg">
-        <div class="flex items-center space-x-4">
-            <!-- Simple SVG logo with brand name -->
-            <svg class="h-8 w-8 text-custom-yellow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-            </svg>
-            <h1 class="text-2xl md:text-3xl font-bold">
-                EmployWell <span class="text-custom-yellow">Benefits</span>
-            </h1>
-        </div>
-        <!-- Simple navigation for a landing page -->
-        <nav class="hidden md:flex space-x-6">
-            <a href="#about" class="hover:text-custom-yellow transition-colors">About Us</a>
-            <a href="#how-it-works" class="hover:text-custom-yellow transition-colors">How It Works</a>
-            <a href="#contact" class="hover:text-custom-yellow transition-colors">Contact</a>
-        </nav>
-    </header>
+    <div class="flex items-center">
+        <img src="https://raw.githubusercontent.com/gregryjleroux/smile_bone_benefits/main/ChatGPT%20Image%20Aug%2018%2C%202025%2C%2012_11_54%20AM.png" alt="Smile Bone Benefits" class="h-16 w-auto">
+    </div>
+    <!-- Simple navigation for a landing page -->
+    <nav class="hidden md:flex space-x-6">
+        <a href="#about" class="hover:text-custom-yellow transition-colors">About Us</a>
+        <a href="#how-it-works" class="hover:text-custom-yellow transition-colors">How It Works</a>
+        <a href="#contact" class="hover:text-custom-yellow transition-colors">Contact</a>
+    </nav>
+</header>
 
     <main class="container mx-auto px-4 py-8 md:py-16">
         <!-- Hero Section -->
@@ -208,4 +202,5 @@
 
 </body>
 </html>
+
 
