--- a/index (1).html
+++ b/index (1).html
@@ -143,7 +143,7 @@
             <h3 class="text-3xl md:text-4xl font-bold text-center text-white mb-8">
                 Ready to Get Started?
             </h3>
-            <p class="text-lg text-center text-gray-200 mb-8 max-w-2xl mx-auto">
+           <p class="text-sm">&copy; 2025 Smile Bone Benefits. All Rights Reserved.</p>
                 Fill out the form below to request your free, no-obligation quote and see how much your business can save.
             </p>
             <form id="contactForm" class="max-w-xl mx-auto space-y-6">
@@ -202,5 +202,6 @@
 
 </body>
 </html>
+
 
 
