--- a/index (1).html
+++ b/index (1).html
@@ -13,7 +13,7 @@
         }
         .bg-custom-blue {
             background-color: #003366; /* EmployWell Now's brand color */
-        }
+        }<img src="/assets/img/proof-math.png" alt="No money out of pocket infographic">
         .text-custom-yellow {
             color: #FFC72C;
         }
@@ -202,6 +202,7 @@
 
 </body>
 </html>
+
 
 
 
