--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smile Bone Benefits</title>
+</head>
+<body>
+  <h1>Smile Bone Benefits</h1>
+  <p>Helping businesses save money while boosting employee paychecks.</p>
+  <a href="https://calendly.com/gregryleroux/consult">Book a 10-min Call</a>
+</body>
+</html>
 
