--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smile Bone Benefits</title>
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Smile Bone Benefits — Section 125, Zero Cost</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>Smile Bone Benefits</h1>
-  <p>Helping businesses save money while boosting employee paychecks.</p>
-  <a href="https://calendly.com/gregryleroux/consult">Book a 10-min Call</a>
+<body class="text-slate-900">
+  <!-- Header -->
+  <header class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between border-b">
+    <div class="flex items-center gap-3">
+      <img src="/assets/img/logo.png" alt="Smile Bone Benefits" class="h-10 w-auto">
+      <span class="sr-only">Smile Bone Benefits</span>
+    </div>
+    <a class="bg-blue-600 text-white px-4 py-2 rounded" href="https://calendly.com/gregryleroux/consult">Book 10-min call</a>
+  </header>
+
+  <main class="max-w-6xl mx-auto px-4">
+    <!-- Hero -->
+    <section class="grid md:grid-cols-2 gap-8 items-center py-10">
+      <div>
+        <h1 class="text-3xl md:text-4xl font-bold mb-3">Cut payroll taxes. Boost employee wellbeing. Zero cost.</h1>
+        <p class="mb-4">Section 125 program that adds $35–45 to employee paychecks and returns ~$700–900 per employee per year to the business.</p>
+        <div class="flex gap-3">
+          <a class="bg-blue-600 text-white px-5 py-3 rounded" href="https://calendly.com/gregryleroux/consult">Get savings estimate</a>
+          <a class="px-5 py-3 border rounded" href="#proof">See proof</a>
+        </div>
+        <p class="text-slate-600 mt-2">IRS-compliant. Audit-ready. No carrier change.</p>
+      </div>
+      <div>
+        <img src="/assets/img/proof-math.png" alt="No money out of pocket infographic" class="rounded shadow max-w-full">
+      </div>
+    </section>
+
+    <!-- Proof -->
+    <section id="proof" class="text-center my-12">
+      <h2 class="text-2xl font-bold mb-6">Proof</h2>
+      <figure class="mx-auto max-w-xl">
+        <img src="/assets/img/proof-math.png" alt="$700 per employee, $35–45 paycheck increase" class="rounded shadow">
+        <figcaption class="text-slate-600 mt-2">$700–900 per employee per year. $35–45 increase per paycheck.</figcaption>
+      </figure>
+      <p class="mt-6">
+        <a class="bg-blue-600 text-white px-6 py-3 rounded" href="/assets/guide.pdf">Download the full guide (PDF)</a>
+      </p>
+    </section>
+  </main>
+
+  <footer class="max-w-6xl mx-auto px-4 py-8 border-t text-slate-600">
+    <small>© Smile Bone Marketing</small>
+  </footer>
 </body>
 </html>
+
 
