--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
             <svg class="h-8 w-8 text-custom-yellow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
             </svg>
-            <h1 class="text-2xl md:text-3xl font-bold">
-                EmployWell <span class="text-custom-yellow">Benefits</span>
-            </h1>
+            <img src="assets/logo.png" alt="Smile Bone Benefits" class="h-8 md:h-10">
+               
         </div>
         <!-- Simple navigation for a landing page -->
         <nav class="hidden md:flex space-x-6">
