--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <svg class="h-8 w-8 text-custom-yellow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
             </svg>
-            <img src="assets/logo.png" alt="Smile Bone Benefits" class="h-8 md:h-10">
+            <img src="logo.png" alt="Smile Bone Benefits" class="h-8 md:h-10">
                
         </div>
         <!-- Simple navigation for a landing page -->
