--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="relative w-full h-64 md:h-96 rounded-2xl overflow-hidden shadow-2xl">
                     <!-- Placeholder image with a theme matching the brand -->
-                    <img src="assets/proof-math.png" alt="Employee Benefits" class="w-full h-full object-contain">
+                    <img src="proof-math.png" alt="Employee Benefits" class="w-full h-full object-contain">
                 </div>
             </div>
         </section>
