--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Inter', sans-serif;
         }
         .bg-custom-blue {
-            background-color: #003366; /* EmployWell Now's brand color */
+            background-color: #003366; /* SmileBone Benefits brand color */
         }
         .text-custom-yellow {
             color: #FFC72C;
@@ -51,7 +51,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
             </svg>
             <h1 class="text-2xl md:text-3xl font-bold">
-                EmployWell <span class="text-custom-yellow">Benefits</span>
+                SmileBone<span class="text-custom-yellow">Benefits</span>
             </h1>
         </div>
         <!-- Simple navigation for a landing page -->
@@ -87,7 +87,7 @@
                         The SmileBone Benefits program is designed to create a true win-win for your business and your employees. We help you unlock significant financial tax credits while simultaneously providing your team with a suite of valuable health and wellness benefits.
                     </p>
                     <p class="text-lg leading-relaxed">
-                        We leverage the **Section 125 Tax Benefit Program**, a legally compliant and proven method, to fund our comprehensive wellness packages. This means you don't have to change your existing benefits, and there are no out-of-pocket costs.
+                        We leverage the *Section 125 Tax Benefit Program*, a legally compliant and proven method, to fund our comprehensive wellness packages. This means you don't have to change your existing benefits, and there are no out-of-pocket costs.
                     </p>
                     <ul class="list-disc list-inside space-y-2 text-lg">
                         <li>Reduce your business's tax liability.</li>
