--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         The SmileBone Benefits program is designed to create a true win-win for your business and your employees. We help you unlock significant financial tax credits while simultaneously providing your team with a suite of valuable health and wellness benefits.
                     </p>
                     <p class="text-lg leading-relaxed">
-                        We leverage the "Section 125 Tax Benefit Program", a legally compliant and proven method, to fund our comprehensive wellness packages. This means you don't have to change your existing benefits, and there are no out-of-pocket costs.
+                        We leverage the "Section 125" Tax Benefit Program, a legally compliant and proven method, to fund our comprehensive wellness packages. This means you don't have to change your existing benefits, and there are no out-of-pocket costs.
                     </p>
                     <ul class="list-disc list-inside space-y-2 text-lg">
                         <li>Reduce your business's tax liability.</li>
