--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="relative w-full h-64 md:h-96 rounded-2xl overflow-hidden shadow-2xl">
                     <!-- Placeholder image with a theme matching the brand -->
-                    <img src="https://placehold.co/600x400/003366/FFC72C?text=Financial+and+Wellness+Solution" alt="Financial and Wellness Solution" class="w-full h-full object-cover">
+                    <img src="https://placehold.co/800x600/003366/FFC72C?text=Financial + Health & Wellness + Solution" alt="Financial and Health & Wellness Solution" class="w-full h-full object-cover">
                 </div>
             </div>
         </section>
