--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
                 </div>
                 <div class="relative w-full h-64 md:h-96 rounded-2xl overflow-hidden shadow-2xl">
                     <!-- Placeholder image with a theme matching the brand -->
-                    <img src="https://placehold.co/800x600/003366/FFC72C?text=Financial + Health & Wellness + Solution" alt="Financial and Health & Wellness Solution" class="w-full h-full object-cover">
+                    <<!-- Start Benefits Image Section -->
+<section id="benefits-image-section" style="background-color:#F3F8FB; padding:60px 20px; text-align:center;">
+  <img src="your-image-file.jpg" alt="Smile Bone Benefits savings overview" style="max-width:100%; height:auto; border-radius:8px;">
+</section>
+<!-- End Benefits Image Section -->>
                 </div>
             </div>
         </section>
