Update benefits image section in index.html

--- a/index.html
+++ b/index.html
@@ -95,15 +95,16 @@
                         <li>Enhance benefits without raising costs.</li>
                         <li>Improve morale and retention.</li>
                     </ul>
-                </div>
-                <div class="relative w-full h-64 md:h-96 rounded-2xl overflow-hidden shadow-2xl">
-                    <!-- Placeholder image with a theme matching the brand -->
-                    <<!-- Start Benefits Image Section -->
-<section id="benefits-image-section" style="background-color:#F3F8FB; padding:60px 20px; text-align:center;">
-  <img src="your-image-file.jpg" alt="Smile Bone Benefits savings overview" style="max-width:100%; height:auto; border-radius:8px;">
+                <section id="benefits-image" class="bg-[#F3F8FB] py-12">
+  <div class="container mx-auto max-w-5xl px-4">
+    <img
+      src="images/benefits-savings.jpg"
+      alt="Businesses and employees save using payroll tax funded wellness benefits"
+      class="w-full h-auto rounded-2xl shadow-lg"
+      loading="lazy"
+    />
+  </div>
 </section>
-<!-- End Benefits Image Section -->>
-                </div>
             </div>
         </section>
 
