Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
                 <section id="benefits-image" class="bg-[#F3F8FB] py-12">
   <div class="container mx-auto max-w-5xl px-4">
     <img
-      src="images/benefits-savings.jpg"
+      <img src="assets/proof-math.png" 
+     alt="Businesses and employees save using payroll tax funded wellness benefits"
+     class="w-full h-auto rounded-2xl shadow-lg"
+     loading="lazy">
+
       alt="Businesses and employees save using payroll tax funded wellness benefits"
       class="w-full h-auto rounded-2xl shadow-lg"
       loading="lazy"
