Update header styles and navigation elements

--- a/index.html
+++ b/index.html
@@ -41,23 +41,22 @@
         <button onclick="closeMessageBox()" class="bg-custom-blue text-white px-4 py-2 rounded-lg hover:bg-blue-900 transition-colors">
             OK
         </button>
-  <header class="bg-custom-blue text-white py-8 px-10 md:px-20 flex items-center justify-between rounded-b-xl shadow-lg sticky top-0 z-50">
+  <header class="bg-custom-blue text-white py-10 px-12 md:px-24 flex items-center justify-between rounded-b-xl shadow-lg sticky top-0 z-50">
   <!-- Brand -->
   <div class="flex items-center space-x-4">
-    <!-- Simple lightning/energy icon -->
-    <svg class="w-10 h-10 text-custom-yellow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-    </svg>
-    <span class="text-3xl font-extrabold">SmileBone<span class="text-custom-yellow">Benefits</span></span>
+    <span class="text-4xl font-extrabold tracking-tight">
+      SmileBone<span class="text-custom-yellow">Benefits</span>
+    </span>
   </div>
 
   <!-- Navigation -->
-  <nav class="space-x-8 text-lg font-medium">
+  <nav class="space-x-10 text-xl font-medium">
     <a href="#about" class="hover:text-custom-yellow transition-colors">About Us</a>
     <a href="#how-it-works" class="hover:text-custom-yellow transition-colors">How It Works</a>
     <a href="#contact" class="hover:text-custom-yellow transition-colors">Contact</a>
   </nav>
 </header>
+
 
 
         <div class="flex items-center space-x-4">
