--- a/index.html
+++ b/index.html
@@ -120,7 +120,15 @@
       </div>
     </section>
 
-    <!-- Contact -->
+    <section id="sbb-video" class="max-w-5xl mx-auto px-5 md:px-10 py-12">
+  <h2 class="text-2xl md:text-3xl font-bold text-custom-blue mb-6 text-center">
+    See How It Works
+  </h2>
+  <video controls class="w-full rounded-2xl shadow-lg">
+    <source src="assets/sbb-video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</section>
     <section id="contact" class="max-w-7xl mx-auto px-5 md:px-10 pb-16">
       <div class="bg-custom-blue text-white p-8 md:p-12 rounded-3xl shadow-xl">
         <h2 class="text-2xl md:text-4xl font-bold text-center mb-2">Get Started</h2>
