--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
   <source src="how_it_works.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+<section id="calculator" class="my-16 text-center">
+  <h2 class="text-2xl md:text-3xl font-bold mb-6">Employee Credit Calculator</h2>
+  <iframe
+    src="employee_count.html"
+    width="100%"
+    height="1000"
+    style="border:none; border-radius:12px;">
+  </iframe>
+</section>
 
 </section>
     <section id="contact" class="max-w-7xl mx-auto px-5 md:px-10 pb-16">
