--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
     Example: 50 employees × $700 = $35,000 annual return
   </p>
 </section>
+<section id="calculator-result" class="text-center my-12">
+  <img src="assets/emolyee_return.png" alt="Employee Return Example" class="mx-auto rounded-lg shadow-md">
+  <p class="mt-4 text-gray-700 text-lg">
+    Example: 50 employees × $700 = $35,000 annual return
+  </p>
+</section>
 
 </section>
     <section id="contact" class="max-w-7xl mx-auto px-5 md:px-10 pb-16">
