--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </iframe>
 </section>
 <section id="calculator-result" class="text-center my-12">
-  <img src="assets/emolyee_return.png" alt="Employee Return Example" class="mx-auto rounded-lg shadow-md">
+  <img src="assets/employee_return.png" alt="Employee Return Example" class="mx-auto rounded-lg shadow-md">
   <p class="mt-4 text-gray-700 text-lg">
     Example: 50 employees × $700 = $35,000 annual return
   </p>
