--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     </section>
 
     <!-- video -->
+<!-- video -->
 <section id="sbb-video" class="max-w-5xl mx-auto px-5 md:px-10 py-12">
   <h2 class="text-2xl md:text-3xl font-bold text-custom-blue mb-6 text-center">See How It Works</h2>
   <video class="w-full rounded-md shadow-lg" controls playsinline preload="metadata" poster="assets/proof-poster.jpg">
@@ -129,6 +130,16 @@
     Your browser does not support the video tag.
   </video>
 </section>
+
+<!-- calculator -->
+<section id="calculator" class="bg-[#0b122b] py-16">
+  <div class="max-w-5xl mx-auto px-5 text-white text-center">
+    <h2 class="text-2xl md:text-3xl font-bold mb-4">Employee Credit Calculator</h2>
+    <p class="text-gray-300 mb-8">Payroll Tax Credit This Year.</p>
+    <!-- embed or JS calculator here -->
+  </div>
+</section>
+
 
   
 
