--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     .modal[aria-hidden="false"],.modal-backdrop[data-open="true"]{display:block}
     .visually-hidden{position:absolute;width:1px;height:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);white-space:nowrap}
   </style>
+  <script id="vtag-ai-js" async src="https://r2.leadsy.ai/tag.js" data-pid="1iH8HFLdWXBT0l65q" data-version="062024"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
