--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Privacy Policy | Smile Bone Benefits</title>
+</head>
+<body>
+
+<h1>Privacy Policy</h1>
+<p>Smile Bone Benefits</p>
+<p>Last updated: December 19, 2025</p>
+
+<p>This website collects limited personal information such as name, email, and payment details when voluntarily provided.</p>
+
+<p>Payments are processed securely through Stripe. We do not store credit card information.</p>
+
+<p>Contact: gregryjleroux@gmail.com</p>
+
+</body>
+</html>
 
