Create terms.html with Terms of Service details
Added Terms of Service content for Smile Bone Benefits.

--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Terms of Service | Smile Bone Benefits</title>
+</head>
+<body>
+
+<h1>Terms of Service</h1>
+<p><strong>Smile Bone Benefits</strong></p>
+<p>Last updated: December 19, 2025</p>
+
+<p>By accessing or using this website, you agree to these Terms of Service.</p>
+
+<p>Smile Bone Benefits provides information and access to employee benefits education and enrollment facilitation.</p>
+
+<p>We do not provide medical, legal, or tax advice.</p>
+
+<p>Payments are processed securely through Stripe. We do not store credit card information.</p>
+
+<p>We do not guarantee specific financial outcomes or savings amounts.</p>
+
+<p>Contact: gregryjleroux@gmail.com</p>
+
+</body>
+</html>
 
