Enhance footer with additional policy links
Added links to Privacy Policy and Terms of Service in the footer.

--- a/index.html
+++ b/index.html
@@ -179,9 +179,14 @@
   </main>
 
   <!-- Footer -->
-  <footer class="text-gray-500 text-sm text-center py-6">
-    <p>&copy; 2025 SmileBone Benefits. All rights reserved.</p>
-  </footer>
+  <footer class="text-gray-500 text-sm text-center py-6 space-y-2">
+  <p>© 2025 Smile Bone Benefits. All rights reserved.</p>
+  <p>
+    <a href="/privacy.html" class="hover:underline">Privacy Policy</a>
+    |
+    <a href="/terms.html" class="hover:underline">Terms of Service</a>
+  </p>
+</footer>
 
   <!-- Modal + backdrop -->
   <div id="backdrop" class="modal-backdrop" data-open="false" tabindex="-1" aria-hidden="true"></div>
