--- a/index.html
+++ b/index.html
@@ -125,10 +125,11 @@
 <!-- video -->
 <section id="sbb-video" class="max-w-5xl mx-auto px-5 md:px-10 py-12">
   <h2 class="text-2xl md:text-3xl font-bold text-custom-blue mb-6 text-center">See How It Works</h2>
-  <video class="w-full rounded-md shadow-lg" controls playsinline preload="metadata" poster="assets/proof-poster.jpg">
-    <source src="assets/proof.webm#t=0.1" type="video/webm">
-    <source src="assets/proof.mp4#t=0.1" type="video/mp4">
-    Your browser does not support the video tag.
+  <video class="w-full rounded-xl shadow-lg" controls playsinline preload="metadata">
+  <source src="/how_it_works.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
   </video>
 </section>
 
