--- a/index.html
+++ b/index.html
@@ -138,7 +138,16 @@
   <div class="max-w-5xl mx-auto px-5 text-white text-center">
     <h2 class="text-2xl md:text-3xl font-bold mb-4">Employee Credit Calculator</h2>
     <p class="text-gray-300 mb-8">Payroll Tax Credit This Year.</p>
-    <!-- embed or JS calculator here -->
+    <div class="mt-10 bg-white rounded-xl overflow-hidden shadow-lg">
+  <iframe
+    src="/employee_count.html"
+    class="w-full"
+    style="height:520px;"
+    frameborder="0"
+    loading="lazy">
+  </iframe>
+</div>
+
   </div>
 </section>
 
