--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 
     <section class="max-w-7xl mx-auto px-6 py-20 text-center">
       <span class="bg-blue-100 text-custom-blue py-1 px-4 rounded-full text-sm font-bold uppercase tracking-wider mb-6 inline-block">IRS Section 125 Compliant • Est. 1978</span>
-      <h1 class="text-4xl md:text-6xl font-bold text-custom-blue mb-6 leading-tight">Mental Health Crisis Response Program</h1>
+<h1 class="text-4xl md:text-6xl font-bold text-custom-blue mb-6 leading-tight">
+  Tax-Advantaged<br>Mental Health Strategy
+</h1>
       <p class="text-xl text-gray-600 max-w-3xl mx-auto mb-10 font-medium">$282 billion annual workforce productivity loss. IRS Section 125 provides the funding mechanism through payroll tax reallocation.</p>
       
       <a href="#contact" class="inline-block bg-custom-yellow text-custom-blue text-xl font-bold px-10 py-5 rounded-full shadow-lg hover:shadow-xl hover:scale-105 transition-transform">Request Tax Impact Analysis</a>
