Refactor styles in index.html with new variables
Updated styles in index.html to include new background color and button styles.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,24 @@
             }
         }
     </script>
-    <style>
-        :root { --sb-navy: #003366; --sb-gold: #FFC72C; }
-        .bg-custom-blue { background-color: var(--sb-navy); }
-        .bg-custom-yellow { background-color: var(--sb-gold); }
-        .text-custom-yellow { color: var(--sb-gold); }
-    </style>
+   <style>
+  :root {
+    --sb-navy: #003366;
+    --sb-gold: #FFC72C;
+    --sb-bg: #F8FAFC;
+  }
+
+  html {
+    font-size: 16px;
+  }
+
+  .cta-btn {
+    font-size: 1rem;
+    line-height: 1.25rem;
+    padding: 1.5rem 3rem;
+    letter-spacing: 0.2em;
+  }
+</style>
 </head>
 <body class="bg-slateBg text-slate-900 font-sans antialiased">
 
