--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   }
 </style>
 </head>
-<body class="bg-slateBg text-slate-900 font-sans antialiased">
+<body class="bg-[var(--sb-bg)] text-slate-900 font-sans antialiased">
 
     <header class="bg-custom-blue text-white sticky top-0 z-30 shadow-xl border-b-4 border-custom-yellow">
         <div class="max-w-7xl mx-auto px-6 h-20 md:h-24 flex items-center justify-between">
