--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -548,7 +549,6 @@
   </script>
 </body>
 </html>
-
 
 
 
