Update branding from SmileBone to Employ Well

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SmileBone Benefits - IRS Section 125 Mental Health Tax Strategy</title>
+  <title>Employ Well Benefits - IRS Section 125 Mental Health Tax Strategy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="IRS Section 125 compliant payroll tax strategy converting employer FICA obligations into funded mental health benefits.">
-  <meta property="og:title" content="SmileBone Benefits">
+  <meta property="og:title" content="Employ Well Benefits">
   <meta property="og:description" content="IRS Section 125 compliant payroll tax strategy converting employer FICA obligations into funded mental health benefits.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="/assets/proof-math.png">
@@ -35,7 +35,7 @@
     <div class="max-w-7xl mx-auto px-5 md:px-10">
       <div class="h-20 md:h-24 flex items-center justify-between">
         <a href="#" class="flex items-center gap-3">
-          <span class="text-3xl md:text-4xl font-extrabold tracking-tight">SmileBone<span class="text-custom-yellow">Benefits</span></span>
+          <span class="text-3xl md:text-4xl font-extrabold tracking-tight">Employ Well<span class="text-custom-yellow">Benefits</span></span>
         </a>
 
         <!-- Desktop nav -->
@@ -277,9 +277,9 @@
   <footer class="bg-gray-100 text-gray-600 text-sm py-8">
     <div class="max-w-7xl mx-auto px-5">
       <div class="text-center space-y-4">
-        <p class="font-semibold text-gray-800">SmileBone Benefits</p>
+        <p class="font-semibold text-gray-800">Employ Well Benefits</p>
         <p class="max-w-3xl mx-auto">SmileBone Benefits administers IRS Section 125 compliant cafeteria plans. Tax savings vary by payroll structure. Consult your tax advisor for organization-specific impact. Administered by: Attentive, EmployWell Plus, CP+, Vero.</p>
-        <p>© 2025 Smile Bone Benefits. All rights reserved.</p>
+        <p>© 2025 Employ Well Benefits. All rights reserved.</p>
         <p>
           <a href="/privacy.html" class="hover:underline">Privacy Policy</a>
           |
