Update page title and add Open Graph meta tag

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Employ Well Benefits - IRS Section 125 Mental Health Tax Strategy</title>
+  <title>EmployWell Benefits | Strategic Tax Efficiency Analysis for Section 125 Implementation</title>
+<meta property="og:title" content="EmployWell Benefits">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="IRS Section 125 compliant payroll tax strategy converting employer FICA obligations into funded mental health benefits.">
   <meta property="og:title" content="Employ Well Benefits">
