Update header and paragraph for tax strategy section

--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
       <div class="bg-custom-blue text-white py-3 px-6 rounded-full inline-block mb-6">
         <span class="text-sm font-semibold">IRS Section 125 Compliant • Established 1978</span>
       </div>
-      <h1 class="text-3xl md:text-5xl font-extrabold text-custom-blue leading-tight">IRS-Compliant Payroll Tax Strategy<br>Addressing the Mental Health Crisis</h1>
-      <p class="mt-6 text-lg md:text-xl text-gray-700 max-w-4xl mx-auto">Section 125 cafeteria plan converts employer FICA obligations into funded mental health benefits. Codified tax law since 1978.</p>
-      
+      <h1 class="text-3xl md:text-5xl font-extrabold text-custom-blue leading-tight">
+Strategic Tax Efficiency Analysis for Section 125 Implementation
+</h1>
+<p class="mt-6 text-lg md:text-xl text-gray-700 max-w-4xl mx-auto">
+Revenue-neutral benefit restructuring that reduces employer FICA while funding employee wellness through pre-tax payroll structuring
+</p>
+
       <div class="mt-8 grid md:grid-cols-3 gap-6 max-w-4xl mx-auto text-left">
         <div class="bg-white p-6 rounded-xl shadow-lg">
           <div class="text-3xl font-bold text-custom-blue">$773</div>
