Revise footer content for Employ Well Benefits
Updated footer text to include new partnership information and clarify cafeteria plan administration.

--- a/index.html
+++ b/index.html
@@ -283,7 +283,11 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
     <div class="max-w-7xl mx-auto px-5">
       <div class="text-center space-y-4">
         <p class="font-semibold text-gray-800">Employ Well Benefits</p>
-        <p class="max-w-3xl mx-auto">SmileBone Benefits administers IRS Section 125 compliant cafeteria plans. Tax savings vary by payroll structure. Consult your tax advisor for organization-specific impact. Administered by: Attentive, EmployWell Plus, CP+, Vero.</p>
+        <p class="max-w-3xl mx-auto">
+In partnership with EmployWell Now. Operated by Smile Bone Benefits LLC.  
+IRS Section 125 compliant cafeteria plan administration. Tax savings vary by payroll structure. Consult your tax advisor for organization-specific impact.
+</p>
+
         <p>© 2025 Employ Well Benefits. All rights reserved.</p>
         <p>
           <a href="/privacy.html" class="hover:underline">Privacy Policy</a>
