--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EmployWell Benefits | Strategic Tax Efficiency Analysis for Section 125 Implementation</title>
+  <title>Employ Well Benefits | Strategic Tax Efficiency Analysis for Section 125 Implementation</title>
 <meta property="og:title" content="EmployWell Benefits">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -102,8 +102,8 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
     <!-- About -->
     <section id="about" class="max-w-7xl mx-auto px-5 md:px-10 py-12 md:py-16">
       <div class="bg-custom-blue text-white p-8 md:p-12 rounded-3xl shadow-xl">
-        <h2 class="text-2xl md:text-4xl font-bold text-center mb-6">The Mental Health Crisis Costs $282 Billion Annually</h2>
-        <p class="text-lg text-center mb-10 text-gray-200">76% of U.S. workers report mental health symptoms. 40% of employee turnover is stress-related. This isn't a wellness perk—it's workforce preservation.</p>
+        <h2 class="text-2xl md:text-4xl font-bold text-center mb-6">Section 125 Payroll Structuring and Employer FICA Impact</h2>
+        <p class="text-lg text-center mb-10 text-gray-200">76% of U.S. workers report mental health symptoms. 40% of employee turnover is stress-related. This is a payroll structuring and tax treatment analysis, not a benefits product.</p>
         
         <div class="grid md:grid-cols-2 gap-8 mb-10">
           <div>
