--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Employ Well Benefits | Strategic Tax Efficiency Analysis for Section 125 Implementation</title>
+  <title>EmployWell Benefits | Strategic Tax Efficiency Analysis for Section 125 Implementation</title>
 <meta property="og:title" content="EmployWell Benefits">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -176,8 +176,8 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
     <!-- Calculator -->
     <section id="calculator" class="bg-[#0b122b] py-16">
       <div class="max-w-5xl mx-auto px-5 text-white text-center">
-        <h2 class="text-2xl md:text-3xl font-bold mb-4">Section 125 Payroll Tax Impact Calculator</h2>
-        <p class="text-gray-300 mb-8">Estimate your annual payroll credit based on W-2 employee count.</p>
+        <h2 class="text-2xl md:text-3xl font-bold mb-4">Employer FICA Impact Estimator (Section 125)</h2>
+        <p class="text-gray-300 mb-8">Estimate projected employer FICA impact based on W-2 payroll structure.</p>
         <div class="mt-10 bg-white rounded-xl overflow-hidden shadow-lg">
           <iframe
             src="/employee_count.html"
@@ -211,7 +211,7 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
 
         <!-- FAQ 3 -->
         <div class="bg-white p-6 rounded-xl shadow-lg">
-          <h3 class="text-xl font-bold text-custom-blue mb-3">What mental health benefits do employees receive?</h3>
+          <h3 class="text-xl font-bold text-custom-blue mb-3">What employee benefits are funded through the Section 125 structure? Benefit access is a secondary outcome of the tax-advantaged payroll structure.</h3>
           <ul class="list-disc list-inside text-gray-700 space-y-2">
             <li>6 personal therapy sessions per year ($0 copay)</li>
             <li>4 couples therapy sessions per year ($0 copay)</li>
@@ -283,13 +283,14 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
   <footer class="bg-gray-100 text-gray-600 text-sm py-8">
     <div class="max-w-7xl mx-auto px-5">
       <div class="text-center space-y-4">
-        <p class="font-semibold text-gray-800">Employ Well Benefits</p>
+        <p class="font-semibold text-gray-800">EmployWell Benefits</p>
         <p class="max-w-3xl mx-auto">
-In partnership with EmployWell Now. Operated by Smile Bone Benefits LLC.  
+EmployWell Benefits provides payroll structuring analysis and Section 125 implementation support. We do not provide tax or legal advice. 
+In partnership with EmployWell Now. Operated by SmileBone Benefits LLC.  
 IRS Section 125 compliant cafeteria plan administration. Tax savings vary by payroll structure. Consult your tax advisor for organization-specific impact.
 </p>
 
-        <p>© 2025 Employ Well Benefits. All rights reserved.</p>
+        <p>© 2025 EmployWell Benefits. All rights reserved.</p>
         <p>
           <a href="/privacy.html" class="hover:underline">Privacy Policy</a>
           |
