--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!-- Hero -->
     <section id="hero" class="max-w-7xl mx-auto px-5 md:px-10 py-12 md:py-20 text-center">
       <div class="bg-custom-blue text-white py-3 px-6 rounded-full inline-block mb-6">
-        <span class="text-sm font-semibold">Section 125 Implementation Framework • Codified Federal Tax Law (1978)</span>
+        <span class="text-sm font-semibold">Payroll Structuring and FICA Impact Analysis • IRC Section 125</span>
 
       </div>
       <h1 class="text-3xl md:text-5xl font-extrabold text-custom-blue leading-tight">
