Revise video section heading and add description
Updated section heading and added a description for the video.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,13 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
     <!-- Video -->
     <section id="sbb-video" class="bg-[#F3F8FB] py-12">
       <div class="max-w-5xl mx-auto px-5 md:px-10">
-        <h2 class="text-2xl md:text-3xl font-bold text-custom-blue mb-6 text-center">Program Overview</h2>
+        <<h2 class="text-2xl md:text-3xl font-bold text-custom-blue mb-2 text-center">
+  Section 125 Implementation and Payroll Structuring Overview
+</h2>
+<p class="text-center text-gray-600 mb-6">
+  Technical walkthrough of payroll flow, compliance framework, and employer FICA impact modeling.
+</p>
+>Section 125 Implementation and Payroll Structuring Overview</h2>
         <video class="w-full rounded-xl shadow-lg" controls playsinline preload="metadata">
           <source src="/how_it_works.mp4" type="video/mp4">
           Your browser does not support the video tag.
