--- a/index.html
+++ b/index.html
@@ -182,8 +182,16 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
     <!-- Calculator -->
     <section id="calculator" class="bg-[#0b122b] py-16">
       <div class="max-w-5xl mx-auto px-5 text-white text-center">
-        <h2 class="text-2xl md:text-3xl font-bold mb-4">Employer FICA Impact Estimator (Section 125)</h2>
-        <p class="text-gray-300 mb-8">Estimate projected employer FICA impact based on W-2 payroll structure.</p>
+        <<h2 class="text-2xl md:text-3xl font-bold text-custom-blue mb-2 text-center">
+  Section 125 Implementation and Payroll Structuring Overview
+</h2>
+<p class="text-center text-gray-500 mb-2">
+  Visual overview. Formal payroll and compliance documentation provided during analysis.
+</p>
+<p class="text-center text-gray-600 mb-6">
+  Technical walkthrough of payroll flow, compliance framework, and employer FICA impact modeling.
+</p>
+
         <div class="mt-10 bg-white rounded-xl overflow-hidden shadow-lg">
           <iframe
             src="/employee_count.html"
@@ -291,9 +299,9 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
       <div class="text-center space-y-4">
         <p class="font-semibold text-gray-800">EmployWell Benefits</p>
         <p class="max-w-3xl mx-auto">
-EmployWell Benefits provides payroll structuring analysis and Section 125 implementation support. We do not provide tax or legal advice. 
-In partnership with EmployWell Now. Operated by SmileBone Benefits LLC.  
-IRS Section 125 compliant cafeteria plan administration. Tax savings vary by payroll structure. Consult your tax advisor for organization-specific impact.
+EmployWell Benefits provides payroll structuring analysis and Section 125 implementation support. We do not provide tax or legal advice.  
+In partnership with EmployWell Now. Operated by Smile Bone Benefits LLC.  
+Tax savings vary by payroll structure. Consult your tax advisor for organization-specific impact.
 </p>
 
         <p>© 2025 EmployWell Benefits. All rights reserved.</p>
