Update section title and description in index.html

--- a/index.html
+++ b/index.html
@@ -165,9 +165,12 @@ Revenue-neutral benefit restructuring that reduces employer FICA while funding e
     <!-- Video -->
     <section id="sbb-video" class="bg-[#F3F8FB] py-12">
       <div class="max-w-5xl mx-auto px-5 md:px-10">
-        <<h2 class="text-2xl md:text-3xl font-bold text-custom-blue mb-2 text-center">
-  Section 125 Implementation and Payroll Structuring Overview
+        <h2 class="text-2xl md:text-3xl font-bold text-center text-custom-blue mb-10">
+  Employer FICA Impact Estimator (Section 125)
 </h2>
+
+  
+
 <p class="text-center text-gray-600 mb-6">
   Technical walkthrough of payroll flow, compliance framework, and employer FICA impact modeling.
 </p>
