--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <main>
 
     <!-- Hero -->
-    <section id="hero" class="max-w-7xl mx-auto px-5 md:px-10 py-12 md:py-20 text-center">
+    
       <div class="bg-custom-blue text-white py-3 px-6 rounded-full inline-block mb-6">
         <span class="text-sm font-semibold">Payroll Structuring and FICA Impact Analysis • IRC Section 125</span>
 
@@ -81,23 +81,27 @@ Strategic Tax Efficiency Analysis for Section 125 Implementation
 Revenue-neutral benefit restructuring that reduces employer FICA while funding employee wellness through pre-tax payroll structuring
 </p>
 
-      <div class="mt-8 grid md:grid-cols-3 gap-6 max-w-4xl mx-auto text-left">
-        <div class="bg-white p-6 rounded-xl shadow-lg">
-          <div class="text-3xl font-bold text-custom-blue">$773</div>
-          <div class="text-sm text-gray-600 mt-2">Average employer payroll credit per employee annually</div>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow-lg">
-          <div class="text-3xl font-bold text-custom-blue">89%</div>
-          <div class="text-sm text-gray-600 mt-2">Employee retention rate (industry avg: 71%)</div>
-        </div>
-        <div class="bg-white p-6 rounded-xl shadow-lg">
-          <div class="text-3xl font-bold text-custom-blue">23%</div>
-          <div class="text-sm text-gray-600 mt-2">Reduction in health claims</div>
-        </div>
-      </div>
+    <section class="max-w-7xl mx-auto px-5 md:px-10 py-16 text-center">
+  <h2 class="text-3xl md:text-4xl font-extrabold text-custom-blue">
+    Payroll and overtime costs are harder to control than they should be.
+  </h2>
 
-      <a href="#contact" class="mt-8 inline-block bg-custom-yellow text-custom-blue text-lg font-bold px-8 py-4 rounded-full shadow hover:brightness-95">Request Tax Impact Analysis</a>
-    </section>
+  <p class="mt-6 text-lg text-gray-700 max-w-2xl mx-auto">
+    We help manufacturers take a closer look at payroll and overtime costs to see where money is being unnecessarily lost.
+  </p>
+
+  <p class="mt-4 text-base text-gray-600 max-w-2xl mx-auto">
+    In manufacturing, payroll pressure shows up through overtime creep, call-offs, turnover, and coverage problems—not as one clear line item.
+  </p>
+
+  <p class="mt-4 text-base text-gray-600 max-w-2xl mx-auto">
+    This is a diagnostic review. Not an insurance pitch. Not a tax discussion.
+  </p>
+
+  <a href="#contact" class="mt-8 inline-block bg-custom-yellow text-custom-blue font-bold px-6 py-3 rounded-lg">
+    Request a payroll efficiency review
+  </a>
+</section>
 
     <!-- About -->
     <section id="about" class="max-w-7xl mx-auto px-5 md:px-10 py-12 md:py-16">
